package fdbsql.protobuf;
option java_package = "com.foundationdb.server.store";
option java_outer_classname = "TableChanges";

message Change {
    optional string change_type = 1;
    optional string old_name = 2;
    optional string new_name = 3;
}

message IndexChange {
    optional string index_type = 1;
    optional Change change = 2;
}

message ChangeSet {
    optional string change_level = 1;
    optional int32 table_id = 2;
    optional string old_schema= 3;
    optional string old_name = 4;
    optional string new_schema = 5;
    optional string new_name = 6;
    repeated Change column_change = 7;
    repeated IndexChange index_change = 8;
    optional string create_as_statement = 9;
}
